# UniSysDBMS

./: CMakeLists.txt  FindMongoDB.cmake  README.md
docs/: Doxyfile.in  Doxyfile.uml  Doxyfile.uml~
docs/latex/: DBClass_8h.tex  DBClass_8h__dep__incl.md5  DBClass_8h__incl.md5  LitClass_8h.tex  LitClass_8h__dep__incl.md5  LitClass_8h__incl.md5  ObjClass_8h.tex  ObjClass_8h__dep__incl.md5  ObjClass_8h__incl.md5  annotated.tex  biopax_8h.tex  biopax_8h__dep__incl.md5  biopax_8h__incl.md5  chebiowl_8h.tex  chebiowl_8h__dep__incl.md5  chebiowl_8h__incl.md5  classunisys_1_1Annotation.tex  classunisys_1_1Annotation__coll__graph.md5  classunisys_1_1Annotation__inherit__graph.md5  classunisys_1_1BIOPAX2.tex  classunisys_1_1BIOPAX2__coll__graph.md5  classunisys_1_1BIOPAX__obj.tex  classunisys_1_1BIOPAX__obj__coll__graph.md5  classunisys_1_1BatchInsert.tex  classunisys_1_1BatchInsert__coll__graph.md5  classunisys_1_1BatchInsert__inherit__graph.md5  classunisys_1_1BioObject.tex  classunisys_1_1BioObject__coll__graph.md5  classunisys_1_1BioObject__inherit__graph.md5  classunisys_1_1BioSource.tex  classunisys_1_1BioSource__coll__graph.md5  classunisys_1_1BioSource__inherit__graph.md5  classunisys_1_1BiochemicalReaction.tex  classunisys_1_1BiochemicalReactionWithTransport.tex  classunisys_1_1BiochemicalReactionWithTransport__coll__graph.md5  classunisys_1_1BiochemicalReactionWithTransport__inherit__graph.md5  classunisys_1_1BiochemicalReaction__coll__graph.md5  classunisys_1_1BiochemicalReaction__inherit__graph.md5  classunisys_1_1CellularLocation.tex  classunisys_1_1CellularLocation__coll__graph.md5  (+283 more)
include/: unisysdb.h
include/database/: database.h  query.h  updater.h  updater.h~
include/dataclass/: DBClass.h  LitClass.h  ObjClass.h  objElement.h
include/exception/: exception.h
include/parser/: biopax.h  chebiowl.h  oboXML.h  psimi.h  xmlParser.h
include/services/biomart/: restBioMart.h
include/services/bioportal/: restBioPortal.h
include/services/miriam/: restMiriam.h
include/services/rest/: rest.h
lib/database/: batchInsert.cpp  batchUpdater.cpp  database.cpp  query.cpp  query.cpp~  updater.cpp  updaterInsert.cpp  updaterInsert.cpp~  updaterRemove.cpp  updaterRemove.cpp~  updaterUpdate.cpp  updaterUpdate.cpp~
lib/dataclass/: LitClass.cpp  dataobject.cpp  idref.cpp  interaction.cpp  literalbson.cpp  miriam.cpp  objElement.cpp  object.cpp  ontology.cpp  physicalEntity.cpp  tracking.cpp
lib/parser/: biopax.cpp  biopaxobj.cpp  chebiowl.cpp  chebiowlclass.cpp  oboXML.cpp  psimi.cpp  stanza.cpp  test
lib/services/biomart/: restBioMart.cpp  restBioMartResult.cpp
lib/services/bioportal/: classbean.cpp  restBioPortal.cpp  restBioPortalResult.cpp  restBioPortalSearchResult.cpp  restBioPortalTermResult.cpp
lib/services/miriam/: restMiriam.cpp
lib/services/ols/: OLSWS.h  OntologyQuerySoapBinding.nsmap  soapC.cpp  soapH.h  soapOLS.cpp  soapOLS.h  soapOntologyQuerySoapBindingProxy.cpp  soapOntologyQuerySoapBindingProxy.h  soapStub.h  test
lib/services/ols/doxygen/html/: OLSWS_8h_source.html  OntologyQuerySoapBinding.html  annotated.html  classOntologyQuerySoapBindingProxy-members.html  classOntologyQuerySoapBindingProxy.html  class__ns1____getAllTermsFromOntology-members.html  class__ns1____getAllTermsFromOntology.html  class__ns1____getAllTermsFromOntologyResponse-members.html  class__ns1____getAllTermsFromOntologyResponse.html  class__ns1____getChildrenFromRoot-members.html  class__ns1____getChildrenFromRoot.html  class__ns1____getChildrenFromRootResponse-members.html  class__ns1____getChildrenFromRootResponse.html  class__ns1____getOntologyLoadDate-members.html  class__ns1____getOntologyLoadDate.html  class__ns1____getOntologyLoadDateResponse-members.html  class__ns1____getOntologyLoadDateResponse.html  class__ns1____getOntologyNames-members.html  class__ns1____getOntologyNames.html  class__ns1____getOntologyNamesResponse-members.html  class__ns1____getOntologyNamesResponse.html  class__ns1____getPrefixedTermsByName-members.html  class__ns1____getPrefixedTermsByName.html  class__ns1____getPrefixedTermsByNameResponse-members.html  class__ns1____getPrefixedTermsByNameResponse.html  (+123 more)
lib/services/ols/xml/: OntologyQuerySoapBinding.getAllTermsFromOntology.req.xml  OntologyQuerySoapBinding.getAllTermsFromOntology.res.xml  OntologyQuerySoapBinding.getChildrenFromRoot.req.xml  OntologyQuerySoapBinding.getChildrenFromRoot.res.xml  OntologyQuerySoapBinding.getOntologyLoadDate.req.xml  OntologyQuerySoapBinding.getOntologyLoadDate.res.xml  OntologyQuerySoapBinding.getOntologyNames.req.xml  OntologyQuerySoapBinding.getOntologyNames.res.xml  OntologyQuerySoapBinding.getPrefixedTermsByName.req.xml  OntologyQuerySoapBinding.getPrefixedTermsByName.res.xml  OntologyQuerySoapBinding.getRootTerms.req.xml  OntologyQuerySoapBinding.getRootTerms.res.xml  OntologyQuerySoapBinding.getTermById.req.xml  OntologyQuerySoapBinding.getTermById.res.xml  OntologyQuerySoapBinding.getTermChildren.req.xml  OntologyQuerySoapBinding.getTermChildren.res.xml  OntologyQuerySoapBinding.getTermMetadata.req.xml  OntologyQuerySoapBinding.getTermMetadata.res.xml  OntologyQuerySoapBinding.getTermParents.req.xml  OntologyQuerySoapBinding.getTermParents.res.xml  OntologyQuerySoapBinding.getTermRelations.req.xml  OntologyQuerySoapBinding.getTermRelations.res.xml  OntologyQuerySoapBinding.getTermXrefs.req.xml  OntologyQuerySoapBinding.getTermXrefs.res.xml  OntologyQuerySoapBinding.getTermsByAnnotationData.req.xml  OntologyQuerySoapBinding.getTermsByAnnotationData.res.xml  OntologyQuerySoapBinding.getTermsByExactName.req.xml  OntologyQuerySoapBinding.getTermsByExactName.res.xml  OntologyQuerySoapBinding.getTermsByName.req.xml  OntologyQuerySoapBinding.getTermsByName.res.xml  OntologyQuerySoapBinding.getVersion.req.xml  OntologyQuerySoapBinding.getVersion.res.xml  OntologyQuerySoapBinding.isObsolete.req.xml  OntologyQuerySoapBinding.isObsolete.res.xml
lib/services/rest/: rest.cpp  rest.h.~1~  test.txt.~1~  test.~1~
sample/: 00016_psimi.xml  Rhea_sample.owl  miriam_16082011.xml  psimiTest  psimiTest.cpp
(+114 files in other folders)
